// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input 组件测试 create 1`] = `
<DocumentFragment>
  <div
    class="i-input"
  >
    <input
      class="i-input__inner"
      placeholder="请输入"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 number 1`] = `
<DocumentFragment>
  <div
    class="i-input i-input--type-number"
  >
    <input
      class="i-input__inner"
      max="1.7976931348623157e+308"
      min="-9007199254740991"
      placeholder="请输入"
      step="1"
      type="number"
      value=""
    />
    <div
      class="i-input-number-button"
    >
      <i
        class="i-icon icon-ArrowCaretTop"
      />
      <i
        class="i-icon icon-ArrowCaretBottom"
      />
    </div>
    <div
      class="i-input-number-slider"
    />
  </div>
</DocumentFragment>
`;
